--- a/css/app.css
+++ b/css/app.css
@@ -17,29 +17,57 @@ body {
   display: inline;
 }
 .menu-container a {
-  color: rgb(250, 245, 237);
   color: #c5c4c4;
   font-size: 16px;
 }
 .menu-container a:hover {
-  color: rgb(255, 224, 224);
+  color: rgb(250, 245, 237);
 }
 .menu-container .active {
-  color: rgb(255, 224, 224);
+  color: rgb(250, 245, 237);
+}
+
+/* .blog-card {
+    max-width: 90%;
+    margin-right: 10px;
+    border-radius: 10px;
+
+    &:hover {
+        border: 1px solid rgb(255, 224, 224);
+    }
+
+    img {
+        max-width: 60%;
+        height: 100%;
+        margin: auto;
+    }
+} */
+.home {
+  padding: 0 3em;
+}
+
+.hero {
+  width: 100%;
+  margin: 0 0 2em 0;
+}
+.hero img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
 .blog-card {
   max-width: 90%;
-  margin-right: 10px;
+  height: 300px;
+  cursor: pointer;
   border-radius: 10px;
 }
 .blog-card:hover {
-  border: 1px solid rgb(255, 224, 224);
+  background-color: aliceblue;
 }
 .blog-card img {
-  max-width: 60%;
-  height: 100%;
-  margin: auto;
+  height: 150px;
+  object-fit: cover;
 }
 
 .footer {
@@ -48,6 +76,7 @@ body {
   margin-top: 3em;
   color: #c5c4c4;
   width: 100%;
+  text-align: center;
 }
 
 .about {
