--- a/css/app.scss
+++ b/css/app.scss
@@ -23,23 +23,21 @@ body {
     }
 
     a {
-        //color: #0e0e0e;
-        color:rgb(250, 245, 237);
         color: #c5c4c4;
         font-size: 16px;
 
         &:hover {
-            color: rgb(255, 224, 224);
+            color:rgb(250, 245, 237);
         
         }
 
     }
     .active {
-        color:rgb(255, 224, 224);
+        color:rgb(250, 245, 237);
     }
 }
 
-.blog-card {
+/* .blog-card {
     max-width: 90%;
     margin-right: 10px;
     border-radius: 10px;
@@ -53,6 +51,38 @@ body {
         height: 100%;
         margin: auto;
     }
+} */
+
+.home {
+    padding: 0 3em;
+}
+
+.hero {
+    width: 100%;
+    margin: 0 0 2em 0;
+
+    img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+}
+
+.blog-card {
+    max-width: 90%;
+    height: 300px;
+    cursor: pointer;
+    border-radius: 10px;
+
+    &:hover {
+        background-color: aliceblue;
+    }
+
+    img {
+        //max-width: 60%
+        height: 150px;
+        object-fit: cover;
+    }
 }
 
 .footer {
@@ -63,6 +93,7 @@ body {
     //position: absolute;
     //bottom: 0;
     width: 100%;
+    text-align: center;
 }
 
 // About Page
