--- a/css/app.scss
+++ b/css/app.scss
@@ -38,7 +38,20 @@ body {
 }
 
 .home {
-    padding: 0 3em;
+    //padding: 0 3em;
+    display: flex;
+}
+
+.cards {
+    width: 95%;
+    margin: auto;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.cell-card {
+    display: flex;
+    justify-content: center;
 }
 
 .hero {
@@ -53,7 +66,8 @@ body {
 }
 
 .blog-card {
-    max-width: 90%;
+    //width: 300px;
+    max-width: 80%;
     height: 300px;
     cursor: pointer;
     border-radius: 10px;
@@ -95,4 +109,11 @@ body {
     .about-parag {
 
     }
+}
+
+// Blog page
+.search {
+    margin: auto;
+    display: flex;
+    justify-content: center;
 }
